Update information for Experience and Projects

--- a/fponce-resume.tex
+++ b/fponce-resume.tex
@@ -77,32 +77,33 @@
 	%%% SKYTOUCH %%%
 	\item
 	\headerrow
-		{\textbf{SkyTouch Technology (via Nearsoft)}}
+		{\textbf{SkyTouch Technology}}
 		{\textbf{Mexico City}}
 	\\
 	\headerrow
 		{\emph{Software Engineer}}
-		{\emph{10/2018 – Present}}
+		{\emph{October 2018 – Present}}
 	\begin{itemize*}
-		\item Design, implement the back-end, test and release new features for the CHOICE Hotel OS.
-		\item Developed and released the interface with TravelClick iHotelier, which led to a new business opportunity closed-won.
-		\item Mentor junior software engineers and onboard new members for the team.
-		\item Working with Java 8, JUnit, AssertJ, Spring, Docker, RabbitMQ, Git, Maven, TypeScript, and Jenkins
+		\item Contributed to sign a new deal for approximately \$70k by developing the interface of TravelClick iHotelier.
+		\item Helped +1,110 hotels to generate simple receipts for both guests, and non-room guests for sundry purchases, 
+		by developing the QuickShop project for the Hotel OS in \textbf{Java}.
+		\item Improved the onboarding process by documenting, mentoring and encouraging team members to mentor new candidates for 
+		Software Engineer positions. 
 	\end{itemize*}
 
 	%%% Lending Club %%%
 	\item
 	\headerrow
-		{\textbf{Lending Club (via Globant)}}
+		{\textbf{Lending Club}}
 		{\textbf{Mexico City}}
 	\\
 	\headerrow
 		{\emph{Java Developer}}
-		{\emph{12/2017 – 10/2018}}
+		{\emph{December 2017 – October 2018}}
 	\begin{itemize*}
-		\item Led the development of the API Gateway for Borrower project, migrating to microservices architecture.
-		\item Developed the RESTful API for Investor project.
-		\item Worked with Java 8, JUnit, Spring, Maven, Struts2, Git, CloudBees and Liquibase.
+		\item Integrated the Borrower mobile application with the backend services, by developing the API Gateway and migrating
+		 to microservices architecture.
+		\item Developed the RESTful API for Investor project using \textbf{Java}.
 	\end{itemize*}
 
 	%%% Tom Sawyer %%%
@@ -113,31 +114,30 @@
 	\\
 	\headerrow
 		{\emph{Product Development Engineer}}
-		{\emph{07/2016 – 12/2017}}
+		{\emph{July 2016 – December 2017}}
 	\begin{itemize*}
-		\item Decreased startup time of the data visualization product by 40\%, creating a new classpath scanning mechanism. 
-		\item Improved the build system and DevOps infrastructure, by migrating the Ant-based build to Maven.
-		\item Integrated the Systems Engineering and Business Process modules into one Data visualization product.
-		\item Worked with Java 7, Spring, Ant, Maven, Subversion, Jenkins.
+		\item Decreased startup time of the data visualization product by 40\%, by creating a new classpath scanning mechanism 
+		using \textbf{Java and Spring}.
+		\item Redesigned the build system and DevOps infrastructure, by migrating the Ant-based build to Maven.
+		\item Contributed to the strategic upgrade of Tom Sawyer Perspectives 8.0, by assembling the Systems Engineering and 
+		Business Process modules into one Data visualization product.
 	\end{itemize*}
 	
 	%%% Legosoft %%%
 	\item
 	\headerrow
-		{\textbf{LegoSoft Soluciones}}
+		{\textbf{LegoSoft}}
 		{\textbf{Mexico City}}
 	\\
 	\headerrow
 		{\emph{Java Liferay Developer}}
-		{\emph{05/2015 – 06/2016}}
+		{\emph{May 2015 – June 2016}}
 	\begin{itemize*}
-		\item Lead the development of a social portal based on Liferay and Vaadin, in a team of 3 developers and 2 analysts.
-		\item Developed the CRM for the project UNIFIN insurance company, in a team of 3 developers.
-		\item Lead the integration of Vaadin and Liferay for new projects in the Company.
-		\item Worked with Java 7, Vaadin, Liferay, Spring, Sugar CRM, JavaScript, Subversion.
+		\item Consolidated the use of Vaadin and Liferay in the company, by executing technical proposal presentations for potential clients, 
+		and mentoring team members in these technologies.
+		\item Led the development of a social portal using Liferay and Vaadin, in a team of 3 developers and 2 analysts.
+		\item Developed the CRM system for the project UNIFIN insurance company, in a team of 3 developers.
 	\end{itemize*}
-
-
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -173,8 +173,8 @@
 		{\emph{International Exchange Program}}
 		{\emph{January 2013 - July 2013}}
 	\begin{itemize*}
-		\item I was awarded a scholarship among the 10 best students at my University to study abroad, at the Faculty of Information 
-		Technology FIT-CTU in Prague.
+		\item Attended lectures as Exchange Student in the Faculty of Information Technology.
+		In this semester I attended to Web 2.0, Latex, Node.js, Signals and Systems and Economics lectures.
 	\end{itemize*}
 
 	%%% Batiz %%%
@@ -199,26 +199,38 @@
 \begin{itemize}
 	\parskip=0.1em
 	
-	\item 
-	\headerrow
-    		{\textbf{ESCOM Exchange Students Group}}
-		{\textbf{08/2015 – 12/2015}}
-	\begin{itemize*}
-		\item Member of the Exchange Students Group, helped students through the process to pursue a scholarship to study abroad, 
-		and gave talks about my experience in the Czech Republic, to encourage them to apply.
-	\end{itemize*}
-
 	%%% CTU %%%
 	\item 
 	\headerrow
+    		{\textbf{International Exchange Program}}
+		{\emph{January 2013 - July 2013}}	
+	\begin{itemize*}
+		\item I was awarded a scholarship among the 10 best students over approximately 250 at my University to study abroad, at the 
+		Faculty of Information Technology FIT-CTU in Prague.
+	\end{itemize*}
+	
+	%%% ESCOM Exchange group %%%
+	\item 
+	\headerrow
+    		{\textbf{Exchange Students Group}}
+		{\emph{August 2015 – December 2015}}
+	\begin{itemize*}
+		\item Member of the Exchange Students Group at my university, helping students through the process to pursue a scholarship to study abroad, 
+		and giving talks about my experience in the Czech Republic.
+	\end{itemize*}
+	
+	%%% Oratoria %%%
+	\item 
+	\headerrow
     		{\textbf{Course: “Oratory, the art of public speaking” }}
-		{\textbf{01/2014 – 03/2014}}	\begin{itemize*}
+		{\emph{January 2014 – March 2014}}
+	\begin{itemize*}
 		\item Attended classes of Public speaking, speech planning, and body language techniques.
 	\end{itemize*}
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%% Education
+%%%%%%%% Technical Skills
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hrule
 \vspace{-0.4em}
@@ -227,10 +239,26 @@
 \begin{indentsection}{\parindent}
 \hyphenpenalty=1000
 \begin{description*}
-	\item[Languages:]
-	C, \CPP, Java, Clojure, \LaTeX, Python, Shell Script, SQL, TypeScript
-	\item[Technical skills:]
-	Agile (Scrum, Kanban)
+	\item -- \textbf{Languages:} Java, Clojure, C, \CPP, \LaTeX, Python, Shell Script, SQL, TypeScript.
+	\item -- \textbf{Technical skills and frameworks:} Git, JUnit, AssertJ, Spring, Docker, RabbitMQ, Maven, TypeScript, 
+	Jenkins, Vaadin, Liferay, Agile (Scrum, Kanban).
+\end{description*}
+\end{indentsection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%% Other Skills
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\hrule
+\vspace{-0.4em}
+\subsection*{Interests and skills}
+
+\begin{indentsection}{\parindent}
+\hyphenpenalty=1000
+\begin{description*}
+	\item -- \textbf{Spanish}, mother tongue. Fluent in \textbf{English} (TOEFL iBT 87). Basic \textbf{French} proficiency (A2 CEFR).
+	\item -- Inclined to never say I can't.
+	\item -- Self-motivated and passionate about learning and growing intellectually. Always searching for challenges.
+	\item -- Interested in Mathematics, Algorithms, Quantum Computing, Geostrategy and Aviation.
 \end{description*}
 \end{indentsection}
 
