Fix Optional section for Interests

--- a/fponce-resume.tex
+++ b/fponce-resume.tex
@@ -173,8 +173,7 @@
 		{\emph{International Exchange Program}}
 		{\emph{January 2013 - July 2013}}
 	\begin{itemize*}
-		\item Attended lectures as Exchange Student in the Faculty of Information Technology.
-		In this semester I attended to Web 2.0, Latex, Node.js, Signals and Systems and Economics lectures.
+		\item Attended Web 2.0, Latex, Node.js, Signals and Systems and Economics, as Exchange Student in the Faculty of Information Technology.
 	\end{itemize*}
 
 	%%% Batiz %%%
@@ -250,7 +249,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hrule
 \vspace{-0.4em}
-\subsection*{Interests and skills}
+\subsection*{Interests and Other Skills}
 
 \begin{indentsection}{\parindent}
 \hyphenpenalty=1000
