Fix last section

--- a/fponce-resume.tex
+++ b/fponce-resume.tex
@@ -233,32 +233,20 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hrule
 \vspace{-0.4em}
-\subsection*{Core Technical Skills}
+\subsection*{Core Technical Skills and Interests}
 
 \begin{indentsection}{\parindent}
 \hyphenpenalty=1000
 \begin{description*}
-	\item -- \textbf{Languages:} Java, Clojure, C, \CPP, \LaTeX, Python, Shell Script, SQL, TypeScript.
-	\item -- \textbf{Technical skills and frameworks:} Git, JUnit, AssertJ, Spring, Docker, RabbitMQ, Maven, TypeScript, 
+	\item -- \textbf{Programming Languages:} Java, Clojure, C, \CPP, \LaTeX, Python, Shell Script, SQL, TypeScript.
+	\item -- \textbf{Technologies and frameworks:} Git, JUnit, AssertJ, Spring, Docker, RabbitMQ, Maven, TypeScript, 
 	Jenkins, Vaadin, Liferay, Agile (Scrum, Kanban).
-\end{description*}
-\end{indentsection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%% Other Skills
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\hrule
-\vspace{-0.4em}
-\subsection*{Interests and Other Skills}
-
-\begin{indentsection}{\parindent}
-\hyphenpenalty=1000
-\begin{description*}
-	\item -- \textbf{Spanish}, mother tongue. Fluent in \textbf{English} (TOEFL iBT 87). Basic \textbf{French} proficiency (A2 CEFR).
+	\item -- \textbf{Languages:} Spanish, mother tongue. Fluent in English (TOEFL iBT 87). Basic French proficiency (A2 CEFR).
 	\item -- Inclined to never say I can't.
 	\item -- Self-motivated and passionate about learning and growing intellectually. Always searching for challenges.
 	\item -- Interested in Mathematics, Algorithms, Quantum Computing, Geostrategy and Aviation.
 \end{description*}
 \end{indentsection}
+
 
 \end{document}
